# SwarmBot

./: ARTags.cpp  ArucoGen  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  SwarmHost  c270Calib.xml  cmake_install.cmake  homography.txt  main.cpp
images/: README.md
include/: SwarmHostConfig.h  SwarmHostConfig.h.in  arucoTest.h
src/: Console.cpp  SwarmHost  SwarmHost.py  arucoTest.cpp  aruco_calibrate_camera_charuco  aruco_detect_markers  helpFile.txt  helpFile_Brief.txt  main.cpp
swarmbot/: README.txt  SWARMBOT.cpp  SWARMBOT.h  swarmbot.ino
